Update rheabot_wordpress.html widget for Render backend connectivity

--- a/rheabot_wordpress.html
+++ b/rheabot_wordpress.html
@@ -12,7 +12,7 @@
 </div>
 
 <script>
-const API_URL = 'http://127.0.0.1:8000/chat';  // Your FastAPI endpoint
+const API_URL = 'https://rhea-bot.onrender.com/chat';  // Your FastAPI endpoint
 let chatHistory = [];
 
 async function sendMessage() {
